# api/docs/swagger.json
@@ -110,12 +110,7 @@
         },
         "/api/menu/get_all": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Get all menu items",
+                "description": "Retrieve a list of menu items with optional filtering and pagination.",
                 "consumes": [
                     "application/json"
                 ],
@@ -125,26 +120,42 @@
                 "tags": [
                     "Menu"
                 ],
-                "summary": "Get All Menus",
+                "summary": "Get All Menu",
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Filter by menu item name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by menu item description",
                         "name": "description",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "name": "name",
+                        "description": "Filter by restaurant ID",
+                        "name": "restaurant_id",
                         "in": "query"
                     },
                     {
-                        "type": "number",
-                        "name": "price",
+                        "type": "integer",
+                        "description": "Number of items to return",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset for pagination",
+                        "name": "offset",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "name": "restaurant_id",
+                        "description": "Filter by menu item price",
+                        "name": "price",
                         "in": "query"
                     }
                 ],
@@ -379,12 +390,7 @@
         },
         "/api/order/get_all": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Get all orders",
+                "description": "Retrieve  filtering and pagination.",
                 "consumes": [
                     "application/json"
                 ],
@@ -394,21 +400,36 @@
                 "tags": [
                     "Order"
                 ],
-                "summary": "Get All Orders",
+                "summary": "Get All Order",
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "menu_item_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
+                        "description": "Filter by order item name",
                         "name": "quantity",
                         "in": "query"
                     },
                     {
                         "type": "string",
+                        "description": "Filter by menu item description",
+                        "name": "menu_item_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by restaurant ID",
                         "name": "reservation_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items to return",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset for pagination",
+                        "name": "offset",
                         "in": "query"
                     }
                 ],
@@ -541,6 +562,79 @@
                 }
             }
         },
+        "/api/payment": {
+            "get": {
+                "description": "Retrieve  filtering and pagination.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "Get All Payment",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filter by order item payment_status",
+                        "name": "payment_status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by menu item payment_method",
+                        "name": "payment_method",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by restaurant reservation_id",
+                        "name": "reservation_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by restaurant amount",
+                        "name": "amount",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items to return",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset for pagination",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/genproto.PaymentsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/payment/create": {
             "post": {
                 "security": [
@@ -624,68 +718,6 @@
                         "description": "OK",
                         "schema": {
                             "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/payment/get_all": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Get all payments",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Payment"
-                ],
-                "summary": "Get All Payments",
-                "parameters": [
-                    {
-                        "type": "number",
-                        "name": "amount",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "payment_method",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "payment_status",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "reservation_id",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/genproto.PaymentsResponse"
                         }
                     },
                     "400": {
@@ -912,12 +944,7 @@
         },
         "/api/reservation/get_all": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Get all reservations",
+                "description": "Retrieve reservations with optional filtering and pagination.",
                 "consumes": [
                     "application/json"
                 ],
@@ -927,26 +954,42 @@
                 "tags": [
                     "Reservation"
                 ],
-                "summary": "Get All Reservations",
+                "summary": "Get All Reservation",
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "reservation_time",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "restaurant_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
+                        "description": "Filter by order item status",
                         "name": "status",
                         "in": "query"
                     },
                     {
                         "type": "string",
+                        "description": "Filter by menu item user_id",
                         "name": "user_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by restaurant reservation_time",
+                        "name": "reservation_time",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by restaurant restaurant_id",
+                        "name": "restaurant_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items to return",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset for pagination",
+                        "name": "offset",
                         "in": "query"
                     }
                 ],
@@ -1110,13 +1153,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Create Successful",
                         "schema": {
-                            "$ref": "#/definitions/genproto.RestaurantResponse"
+                            "type": "string"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Error while Creating",
                         "schema": {
                             "type": "string"
                         }
@@ -1159,13 +1202,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Delete Successful",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Error while Deleting",
                         "schema": {
                             "type": "string"
                         }
@@ -1179,14 +1222,9 @@
                 }
             }
         },
-        "/api/restaurant/get-all": {
+        "/api/restaurant/get_all": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Retrieves a list of all restaurants",
+                "description": "Retrieve a list of restaurants with optional filtering and pagination",
                 "consumes": [
                     "application/json"
                 ],
@@ -1200,22 +1238,38 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "name": "address",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "description",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
+                        "description": "Filter by restaurant name",
                         "name": "name",
                         "in": "query"
                     },
                     {
                         "type": "string",
+                        "description": "Filter by restaurant phone number",
                         "name": "phone_number",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by restaurant address",
+                        "name": "address",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by restaurant description",
+                        "name": "description",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Number of items to return",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset for pagination",
+                        "name": "offset",
                         "in": "query"
                     }
                 ],
@@ -1227,7 +1281,7 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Error while Retrieving",
                         "schema": {
                             "type": "string"
                         }
@@ -1241,14 +1295,14 @@
                 }
             }
         },
-        "/api/restaurant/get-by-id/{id}": {
+        "/api/restaurant/get_by_id/{id}": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get a restaurant by its ID",
+                "description": "Retrieve a restaurant by its ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -1276,7 +1330,7 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Error while Retrieving",
                         "schema": {
                             "type": "string"
                         }
@@ -1328,13 +1382,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Update Successful",
                         "schema": {
-                            "$ref": "#/definitions/genproto.RestaurantResponse"
+                            "type": "string"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Error while Updating",
                         "schema": {
                             "type": "string"
                         }
@@ -1429,17 +1483,6 @@
                 },
                 "phone_number": {
                     "type": "string"
-                }
-            }
-        },
-        "genproto.Filter": {
-            "type": "object",
-            "properties": {
-                "limit": {
-                    "type": "integer"
-                },
-                "offset": {
-                    "type": "integer"
                 }
             }
         },
