# api/handlers/reservation.go
@@ -24,39 +24,51 @@ import (
 func (h *Handler) CreateReservationHandler(ctx *gin.Context) {
 	request := pb.CreateReservationRequest{}
 	err := ctx.ShouldBind(&request)
+	// time input this example type 2024-10-14T23:34:34Z
 	if err != nil {
-		BadRequest(ctx, err)
+		BadRequest(ctx, fmt.Errorf("failed to bind request: %v", err))
 		return
 	}
 
 	if _, err := uuid.Parse(request.UserId); err != nil {
-		BadRequest(ctx, err)
+		BadRequest(ctx, fmt.Errorf("invalid user ID: %v", err))
 		return
 	}
 
 	if _, err := uuid.Parse(request.RestaurantId); err != nil {
-		BadRequest(ctx, err)
+		BadRequest(ctx, fmt.Errorf("invalid restaurant ID: %v", err))
 		return
 	}
 
 	if request.Status != "pending" && request.Status != "confirmed" && request.Status != "cancelled" {
-		BadRequest(ctx, fmt.Errorf("invalid status"))
+		BadRequest(ctx, fmt.Errorf("invalid status: %v", request.Status))
 		return
 	}
+
 	time1, err := time.Parse(time.RFC3339, request.ReservationTime)
 	if err != nil {
 		BadRequest(ctx, fmt.Errorf("error parsing reservation time: %v", err))
 		return
 	}
+
 	request.ReservationTime = time1.Format(time.RFC3339)
-	resp, err := h.ReservationService.CreateReservation(ctx, &request)
+	//_, err = h.ReservationService.GetByIdRestaurant(ctx, &pb.IdRequest{Id: request.RestaurantId})
+	//if err != nil {
+	//	BadRequest(ctx, fmt.Errorf("Restaurant bazada mavjud emas"))
+	//	return
+	//}
+	//_, err = h.UsersService.GetByIdUser(ctx, &pb.IdRequest{Id: request.UserId})
+	//if err != nil {
+	//	BadRequest(ctx, fmt.Errorf("User bazada mavjud emas"))
+	//	return
+	//}
+	_, err = h.ReservationService.CreateReservation(ctx, &request)
 	if err != nil {
-		fmt.Println("+++++++++", err)
-		InternalServerError(ctx, err)
+		InternalServerError(ctx, fmt.Errorf("failed to create reservation: %v", err))
 		return
 	}
+	OK(ctx)
 
-	ctx.JSON(http.StatusOK, resp)
 }
 
 // UpdateReservationHandler handles the update of a reservation.
@@ -76,32 +88,51 @@ func (h *Handler) UpdateReservationHandler(ctx *gin.Context) {
 	request := pb.UpdateReservationRequest{}
 	err := ctx.ShouldBind(&request)
 	if err != nil {
-		BadRequest(ctx, err)
+		BadRequest(ctx, fmt.Errorf("failed to bind request: %v", err))
 		return
 	}
 
 	if _, err := uuid.Parse(request.UserId); err != nil {
-		BadRequest(ctx, err)
+		BadRequest(ctx, fmt.Errorf("invalid user ID: %v", err))
 		return
 	}
 
 	if _, err := uuid.Parse(request.RestaurantId); err != nil {
-		BadRequest(ctx, err)
+		BadRequest(ctx, fmt.Errorf("invalid restaurant ID: %v", err))
 		return
 	}
 
 	if request.Status != "" && request.Status != "pending" && request.Status != "confirmed" && request.Status != "cancelled" {
-		BadRequest(ctx, fmt.Errorf("invalid status"))
+		BadRequest(ctx, fmt.Errorf("invalid status: %v", request.Status))
 		return
 	}
-
-	resp, err := h.ReservationService.UpdateReservation(ctx, &request)
+	_, err = h.ReservationService.GetByIdReservation(ctx, &pb.IdRequest{Id: request.Id})
 	if err != nil {
-		InternalServerError(ctx, err)
+		BadRequest(ctx, fmt.Errorf("Bu id Databaseda yoq"))
+		return
+	}
+	//_, err = h.ReservationService.GetByIdRestaurant(ctx, &pb.IdRequest{Id: request.RestaurantId})
+	//if err != nil {
+	//	BadRequest(ctx, fmt.Errorf("Restaurant bazada mavjud emas"))
+	//	return
+	//}
+	//_, err = h.UsersService.GetByIdUser(ctx, &pb.IdRequest{Id: request.UserId})
+	//if err != nil {
+	//	BadRequest(ctx, fmt.Errorf("User bazada mavjud emas"))
+	//	return
+	//}
+	_, err = h.ReservationService.GetByIdReservation(ctx, &pb.IdRequest{Id: request.UserId})
+	if err != nil {
+		BadRequest(ctx, fmt.Errorf("resevation bazada mavjud emas"))
+		return
+	}
+	_, err = h.ReservationService.UpdateReservation(ctx, &request)
+	if err != nil {
+		InternalServerError(ctx, fmt.Errorf("failed to update reservation: %v", err))
 		return
 	}
 
-	ctx.JSON(http.StatusOK, resp)
+	Created(ctx)
 }
 
 // DeleteReservationHandler handles the deletion of a reservation.
@@ -123,13 +154,16 @@ func (h *Handler) DeleteReservationHandler(ctx *gin.Context) {
 		BadRequest(ctx, err)
 		return
 	}
-
-	_, err := h.ReservationService.DeleteReservation(ctx, &pb.IdRequest{Id: id})
+	_, err := h.ReservationService.GetByIdReservation(ctx, &pb.IdRequest{})
+	if err != nil {
+		BadRequest(ctx, fmt.Errorf("Bu id Databaseda yoq"))
+		return
+	}
+	_, err = h.ReservationService.DeleteReservation(ctx, &pb.IdRequest{Id: id})
 	if err != nil {
 		InternalServerError(ctx, err)
 		return
 	}
-
 	OK(ctx)
 }
 
@@ -158,52 +192,68 @@ func (h *Handler) GetByIdReservationHandler(ctx *gin.Context) {
 		InternalServerError(ctx, err)
 		return
 	}
-
 	ctx.JSON(http.StatusOK, resp)
 }
 
-// GetAllReservationHandler handles fetching all reservations.
-// @Summary Get All Reservations
-// @Description Get all reservations
+// GetAllReservationHandler retrieves reservations with optional filtering and pagination.
+// @Summary Get All Reservation
+// @Description Retrieve reservations with optional filtering and pagination.
 // @Tags Reservation
 // @Accept json
-// @Security BearerAuth
 // @Produce json
-// @Param query query genproto.GetAllReservationRequest true "Get All Reservations"
+// @Param status query string false "Filter by reservation status"
+// @Param user_id query string false "Filter by user ID"
+// @Param reservation_time query string false "Filter by reservation time"
+// @Param restaurant_id query string false "Filter by restaurant ID"
+// @Param limit query int false "Number of items to return"
+// @Param offset query int false "Offset for pagination"
 // @Success 200 {object} genproto.ReservationsResponse
 // @Failure 400 {object} string
 // @Failure 500 {object} string
 // @Router /api/reservation/get_all [get]
 func (h *Handler) GetAllReservationHandler(ctx *gin.Context) {
 	request := pb.GetAllReservationRequest{}
-	err := ctx.ShouldBind(&request)
+	limit := ctx.Query("limit")
+	limit1, err := IsLimitOffsetValidate(limit)
 	if err != nil {
-		BadRequest(ctx, err)
+		BadRequest(ctx, fmt.Errorf("invalid limit: %v", err))
 		return
 	}
-
-	if request.UserId != "" {
-		if _, err := uuid.Parse(request.UserId); err != nil {
-			BadRequest(ctx, err)
-			return
-		}
+	request.LimitOffset = &pb.Filter{
+		Limit: int64(limit1),
 	}
 
-	if request.RestaurantId != "" {
-		if _, err := uuid.Parse(request.RestaurantId); err != nil {
-			BadRequest(ctx, err)
-			return
-		}
-	}
-
-	if request.Status != "" && request.Status != "pending" && request.Status != "confirmed" && request.Status != "cancelled" {
-		BadRequest(ctx, fmt.Errorf("invalid status"))
+	offset := ctx.Query("offset")
+	offset1, err := IsLimitOffsetValidate(offset)
+	if err != nil {
+		BadRequest(ctx, fmt.Errorf("invalid offset: %v", err))
 		return
 	}
+	request.LimitOffset.Offset = int64(offset1)
+	userID := ctx.Query("user_id")
+	if userID != "" {
+		if _, err := uuid.Parse(userID); err != nil {
+			BadRequest(ctx, fmt.Errorf("invalid user ID: %v", err))
+			return
+		}
+		request.UserId = userID
+	}
+
+	// Validate restaurant_id if provided
+	restaurantID := ctx.Query("restaurant_id")
+	if restaurantID != "" {
+		if _, err := uuid.Parse(restaurantID); err != nil {
+			BadRequest(ctx, fmt.Errorf("invalid restaurant ID: %v", err))
+			return
+		}
+		request.RestaurantId = restaurantID
+	}
+
+	request.Status = ctx.Query("status")
 
 	resp, err := h.ReservationService.GetAllReservation(ctx, &request)
 	if err != nil {
-		InternalServerError(ctx, err)
+		InternalServerError(ctx, fmt.Errorf("failed to get reservations: %v", err))
 		return
 	}
 
